src/cypd.css
/* ... */
/* cypd button */

.cypd-button {
    box-sizing: border-box;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    position: relative;
    padding: 0px 12px 0px 12px;
    border-radius: 4px;
    cursor: pointer;
    height: 32px;
    line-height: 32px;
    overflow: hidden;
    white-space: nowrap;
    transition: color var(--default-transition-duration) ease-in-out 50ms, border var(--default-transition-duration) ease-in-out, background-color var(--default-transition-duration) ease-in-out;
    user-select: none;
    flex-shrink: 0;
}

.cypd-button.round {
    border-radius: calc(var(--default-select-normal-height) / 2);
}

.cypd-button.small.round {
    border-radius: calc(var(--default-select-small-height) / 2);
}

.cypd-button.small {
    padding: 0px 6px 0px 6px;
}

.cypd-button.no-content {
    width: var(--default-select-normal-height);
    padding: 0px 10px 0px 10px;
}

.cypd-button.small.no-content {
    width: var(--default-select-small-height);
}

.cypd-button.primary {
    color: white;
    background-color: var(--default-cyp-blue-active);
}

.cypd-button.primary:hover {
    background-color: var(--default-cyp-blue-hover);
}

.cypd-button.primary:active {
    background-color: var(--default-cyp-blue-active);
}

.cypd-button.danger {
    color: white;
    background-color: var(--default-red-color);
}

.cypd-button.danger:hover {
    background-color: var(--default-red-hover-color);
}

.cypd-button.danger:active {
    background-color: var(--default-red-active-color);
}

.cypd-button.default {
    background-color: white;
    color: var(--default-deepgray-color);
    border: 1px solid var(--default-gray-color);
}

.cypd-button.default:hover {
    color: var(--default-cyp-blue-hover);
    border: 1px solid var(--default-cyp-blue-hover);
}

.cypd-button.default:active {
    color: var(--default-cyp-blue-active);
    border: 1px solid var(--default-cyp-blue-active);
}

.cypd-button.default .cypd-icon:not([class*='fc-']) * {
    transition: stroke var(--default-transition-duration) ease-in-out 50ms;
}

.cypd-button.disabled {
    background-color: var(--default-disabled-background);
    color: var(--default-disabled-color);
    border: 1px solid var(--default-disabled-color);
    cursor: not-allowed;
}

.cypd-button .context {
    font-weight: bold;
}

.cypd-button.small .context {
    font-weight: 500;
}

.cypd-button:not(.no-content) .wrap-icon {
    display: flex;
    margin-right: 3px;
}

.cypd-button .cypd-icon-wrapper {
    transform: scale(0.8);
}

.cypd-button.primary .cypd-icon-wrapper .cypd-icon:not([class*='fc-']) *,
.cypd-button.danger .cypd-icon-wrapper .cypd-icon:not([class*='fc-']) * {
    stroke: white;
}

.cypd-button.default .cypd-icon-wrapper .cypd-icon:not([class*='fc-']) * {
    stroke: rgb(139, 139, 139);
}

.cypd-button.default:hover .cypd-icon-wrapper .cypd-icon:not([class*='fc-']) * {
    stroke: var(--default-cyp-blue-hover);
}

.cypd-button.default:active .cypd-icon-wrapper .cypd-icon:not([class*='fc-']) * {
    stroke: var(--default-cyp-blue-active);
}

.cypd-button.disabled .cypd-icon-wrapper .cypd-icon:not([class*='fc-']) * {
    stroke: rgb(163, 163, 163);
}


/* cypd checkbox */

.cypd-checkbox-wrapper {
    display: inline-flex;
    flex-direction: row;
    align-items: center;
    position: relative;
    width: auto;
    height: var(--default-normal-height);
    line-height: var(--default-normal-height);
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.cypd-checkbox-wrapper.disabled {
    cursor: not-allowed;
}

.cypd-checkbox-wrapper input {
    position: absolute;
    width: 0;
    height: 0;
    visibility: hidden;
}

.cypd-checkbox-wrapper .cypd-checkbox {
    flex-shrink: 0;
    height: 20px;
    width: 20px;
    border: 1px solid var(--default-gray-color);
    border-radius: 3px;
    background-color: white;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20px' height='20px' overflow='visible'><path d='M3 10 8 14 15 4' stroke='white' stroke-width='2' fill='none' /></svg>");
    background-repeat: no-repeat;
    transition: border var(--default-transition-duration), background-color var(--default-transition-duration);
}

.cypd-checkbox-wrapper:hover .cypd-checkbox {
    border: 1px solid var(--default-cyp-blue-hover);
}

.cypd-checkbox-wrapper input:checked~.cypd-checkbox {
    background-color: var(--default-cyp-blue-hover);
    border: 1px solid var(--default-cyp-blue-hover);
}

.cypd-checkbox-wrapper input:disabled~.cypd-checkbox {
    background-color: gray;
    border: 1px solid gray;
}

.cypd-checkbox-wrapper span {
    height: var(--default-small-height);
    line-height: var(--default-small-height);
    padding-left: 5px;
    overflow: hidden;
}


/* cypd radio group */

.cypd-radio-group-wrapper {
    display: inline-flex;
    flex-direction: row;
    justify-content: center;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.cypd-radio-group-wrapper.vertical {
    flex-direction: column;
}

.cypd-radio-group-wrapper.vertical .cypd-radio-wrapper {
    margin-top: 2.5px;
    margin-bottom: 2.5px;
}

.cypd-radio-wrapper input {
    position: absolute;
    visibility: hidden;
    height: 0;
    width: 0;
}

.cypd-radio-wrapper {
    display: flex;
    flex-direction: row;
    cursor: pointer;
    margin-left: 5px;
}

.cypd-radio-wrapper.disabled {
    cursor: not-allowed;
}

.cypd-radio-wrapper .cypd-radio {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 20px;
    width: 20px;
    border: 1px solid var(--default-gray-color);
    border-radius: 50%;
    background-color: white;
    transition: border-color var(--default-transition-duration);
}
/* ... */

